.devops/kubernetes/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-api
  namespace: enterprise-dev
  labels:
    app: backend-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend-api

  template:
    metadata:
      labels:
        app: backend-api

    spec:
      containers:
        - name: backend-api
          image: docker-backend:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
