.devops/kubernetes/dev/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-api-service
  namespace: enterprise-dev
  labels:
    app: backend-api

spec:
  selector:
    app: backend-api

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
